--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -331,70 +331,39 @@ jobs:
       - destroy-environment
       - revert-migrations    
                     
-  # deploy-backend:
-  #   docker:
-  #     - image: cimg/base:stable
-  #   steps:
-  #     - checkout
-  #     - add_ssh_keys:
-  #         fingerprints: ["f5:9a:91:f5:a2:06:c2:ab:18:0e:6a:1f:f9:e6:76:1e"]
-  #     - attach_workspace:
-  #         at: ~/
-  #     - install_nodejs
-  #     - install_awscli
-  #     - install_ansible
-     
-  #     - run:
-  #         name: Deploy backend
-  #         command: |
-  #           cd backend
-
-  #           npm i
-  #           npm run build
-  #           cd ..
-
-  #           cd .circleci/ansible
-  #           mkdir files
-  #           cd files
-  #           tar -C ../../../backend -czvf artifact.tar.gz .
-  #           cd ../
-
-  #           echo "Contents of the inventory.txt file is  ..."
-  #           cat inventory.txt
-  #           ansible-playbook -i inventory.txt deploy-backend.yml
-  #     - destroy-environment
-  #     - revert-migrations 
   deploy-backend:
     docker:
-      - image: python:3.7-alpine3.16
+      - image: cimg/base:stable
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints:
-            - 'ab:52:25:68:df:4c:3a:d5:48:18:55:d8:f9:3b:df:de'
-      - run:
-          name: Install dependencies
-          command: |
-            apk add --update --no-cache tar gzip nodejs npm aws-cli ansible
-      - restore_cache:
-          keys: [backend-build]
+          fingerprints: ["f5:9a:91:f5:a2:06:c2:ab:18:0e:6a:1f:f9:e6:76:1e"]
       - attach_workspace:
           at: ~/
+      - install_nodejs
+      - install_awscli
+      - install_ansible
+     
       - run:
           name: Deploy backend
           command: |
             cd backend
-            npm install
+
+            npm i
             npm run build
             cd ..
-            tar -C backend -czvf artifact.tar.gz .
-            mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
-            mv artifact.tar.gz .circleci/ansible/roles/deploy/files/artifact.tar.gz
+
             cd .circleci/ansible
-            echo "Contents of the inventory.txt file is ------$(cat inventory.txt)"
+            mkdir files
+            cd files
+            tar -C ../../../backend -czvf artifact.tar.gz .
+            cd ../
+
+            echo "Contents of the inventory.txt file is  ..."
+            cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
       - destroy-environment
-      - revert-migrations
+      - revert-migrations 
 
   smoke-test:
     docker:
@@ -420,6 +389,8 @@ jobs:
             else
               exit 1
             fi
+
+             if curl -s -v --connect-timeout 30 --retry-connrefused 5 "${API_URL}" | grep "ok"  
       - run:
           name: Frontend smoke test.
           command: |
