--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,10 @@ version: 2.1
 orbs: 
   slack: circleci/slack@4.1
 
-parameters:
-  workflow_id:
-    type: string
-    default: '${CIRCLE_WORKFLOW_ID:0:7}'
+# parameters:
+#   workflow_id:
+#     type: string
+#     default: '${CIRCLE_WORKFLOW_ID:0:7}'
 
 commands:
   install_nodejs:
@@ -383,7 +383,7 @@ jobs:
             echo ${BACKEND_PUBLIC_IP}
             echo backend-${CIRCLE_WORKFLOW_ID:0:7}
             echo ${API_URL}
-            if curl -s ${API_URL/api/status} | grep "ok"
+            if curl -s $API_URL/api/status | grep "ok"
             then
               exit 0
             else
