--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -268,7 +268,7 @@ jobs:
           command: |
              cd .circleci/ansible
              cat inventory.txt
-             ansible-playbook -i inventory.txt configure-server.yml
+            #  ansible-playbook -i inventory.txt configure-server.yml
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
@@ -364,19 +364,14 @@ jobs:
             ansible-playbook -i inventory.txt deploy-backend.yml
       - destroy-environment
       - revert-migrations 
-    # new code
+
   smoke-test:
     docker:
-      - image: python:3.7-alpine3.11 
+      - image: cimg/base:stable
     steps:
       - checkout
-      - attach_workspace:
-          at: ~/.circleci/ansible/inventory.txt
-      - run:
-          name: Install dependencies
-          command: |
-            apk add --update curl nodejs npm
-            pip install awscli 
+      - install_nodejs
+      - install_awscli
       - run:
           name: Backend smoke test.
           command: |
@@ -394,55 +389,19 @@ jobs:
             else
               exit 1
             fi
+
+            #  if curl -s -v --connect-timeout 30 --retry-connrefused 5 "${API_URL}" | grep "ok"  
       - run:
           name: Frontend smoke test.
           command: |
-              URL="http://udapeoplefrontend${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
-              if curl -s ${URL} | grep "Welcome"
-              then
-                return 0
-              else
-                return 1
-              fi
-    # new code
-
-  # smoke-test:
-  #   docker:
-  #     - image: cimg/base:stable
-  #   steps:
-  #     - checkout
-  #     - install_awscli
-  #     - install_nodejs
-  #     - run:
-  #         name: Backend smoke test.
-  #         command: |
-  #           BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
-  #             --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-  #             --query 'Reservations[*].Instances[*].PublicIpAddress' \
-  #             --output text)
-  #           export API_URL=http://${BACKEND_PUBLIC_IP}:3030
-  #           echo ${BACKEND_PUBLIC_IP}
-  #           echo backend-${CIRCLE_WORKFLOW_ID:0:7}
-  #           echo ${API_URL}
-  #           if curl -s $API_URL/api/status | grep "ok"
-  #           then
-  #             exit 0
-  #           else
-  #             exit 1
-  #           fi
-
-  #            if curl -s -v --connect-timeout 30 --retry-connrefused 5 "${API_URL}" | grep "ok"  
-  #     - run:
-  #         name: Frontend smoke test.
-  #         command: |
-  #           FRONTEND_WEBSITE=http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website.${AWS_DEFAULT_REGION}.amazonaws.com
-  #           echo $FRONTEND_WEBSITE
-  #           if curl -s $FRONTEND_WEBSITE | grep "Welcome"
-  #           then
-  #             return 0
-  #           else
-  #             return 1
-  #           fi
+            FRONTEND_WEBSITE=http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website.${AWS_DEFAULT_REGION}.amazonaws.com
+            echo $FRONTEND_WEBSITE
+            if curl -s $FRONTEND_WEBSITE | grep "Welcome"
+            then
+              return 0
+            else
+              return 1
+            fi
       # - destroy-environment
       # - revert-migrations
 
@@ -541,9 +500,9 @@ workflows:
           requires: [run-migrations]
       - deploy-backend:
           requires: [run-migrations]
-      - smoke-test:
-          requires: [deploy-backend, deploy-frontend]
-      - cloudfront-update:
-          requires: [smoke-test]
+      # - smoke-test:
+      #     requires: [deploy-backend, deploy-frontend]
+      # - cloudfront-update:
+      #     requires: [smoke-test]
       # - cleanup:
       #     requires: [cloudfront-update]
