--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -241,14 +241,13 @@ jobs:
             aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --filters "Name=tag:Name,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --output text >> .circleci/ansible/inventory.txt
+              --output text >> project/.circleci/ansible/inventory.txt
               # cat inventory.txt
                
       - persist_to_workspace:
           root: ~/
           paths:
-            # - project/.circleci/ansible/inventory.txt
-            - .circleci/ansible/*
+            - project/.circleci/ansible/inventory.txt
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}    
   configure-infrastructure:
