--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -459,6 +459,7 @@ jobs:
               --stack-name InitialStack
       - destroy-environment
       - revert-migrations
+
   cleanup:
     docker:
       - image: cimg/base:stable
@@ -532,7 +533,7 @@ workflows:
           requires: [run-migrations]
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
-      - cloudfront-update:
-          requires: [smoke-test]
+      - cloudfront-update
+          # requires: [smoke-test]
       - cleanup:
           requires: [cloudfront-update]
