--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -287,7 +287,9 @@ jobs:
 
   configure-infrastructure:
     docker:
-      - image: python:3.7-alpine3.16
+      # - image: python:3.7-alpine3.16
+      - image: cimg/base:stable
+
     steps:
       - checkout
       - add_ssh_keys:
@@ -299,6 +301,8 @@ jobs:
             apk add --update --no-cache tar gzip ansible aws-cli
       - attach_workspace:
           at: ~/
+      - install_ansible
+      - install_awscli
       - run:
           name: Configure server
           command: |
