--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -287,22 +287,30 @@ jobs:
 
   configure-infrastructure:
     docker:
-      # - image: python:3.7-alpine3.16
-      - image: cimg/base:stable
+      - image: python:3.7-alpine3.16
+      # - image: cimg/base:stable
 
     steps:
       - checkout
       - add_ssh_keys:
           fingerprints:
             - 'f5:9a:91:f5:a2:06:c2:ab:18:0e:6a:1f:f9:e6:76:1e'
-      # - run:
-      #     name: Install dependencies
-      #     command: |
+      - run: 
+          name: View content of inventory.txt
+          command: cat .circleci/ansible/inventory.txt 
+          
+      - run:
+          name: Install dependencies
+          command: |
+            # Install dependencies needed for your playbook
+            apk add --update ansible
+            pip install awscli
+            aws --version
             # apk add --update --no-cache tar gzip ansible aws-cli
       - attach_workspace:
           at: ~/
-      - install_ansible
-      - install_awscli
+      # - install_ansible
+      # - install_awscli
       - run:
           name: Configure server
           command: |
